--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -2617,6 +2617,7 @@
 	<string id="8010" value="This is a pre-release version of Shareaza, and the beta testing period has ended. Please download the full, official release from http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Changing view will close any windows you have open. Would you like to change now?"/>
 	<string id="8012" value="Torrent Information"/>
+	<string id="8014" value="Download Properties"/>
 	<string id="8060" value="Hub/Ultrapeer mode with %lu neighbour(s). %s in local library."/>
 	<string id="8061" value="Ultrapeer mode with %lu neighbour(s). %s in local library."/>
 	<string id="8062" value="Hub mode with %lu neighbour(s). %s in local library."/>
